--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -30,3 +30,9 @@
 .boton:hover{
     background-color: #FAF861;
 }
+
+@media screen and (max-width: 1000px){
+    .body{
+        width: 85vw;
+    }
+}
