--- a/src/components/navBar/Navbar.module.css
+++ b/src/components/navBar/Navbar.module.css
@@ -2,6 +2,7 @@
     padding: 0;
     display: flex;
     color: #1D0508;
+    justify-content: start;
 }
 
 .sidebar{
@@ -11,6 +12,9 @@
     background-color: #292285;
     /* padding-left: 5px; */
     transition: all 0.4s ease;
+    position: fixed;
+    top: 0%;
+    z-index: 2;
 }
 
 .topSection{
@@ -46,6 +50,19 @@
 
 .component{
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
+    top: 0%;
+    /* border: 1px solid black; */
+    padding-left: 65px;
+    height: 100vh
+}
 
+.close{
+    background-color: black;
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    opacity: 50%;
+    z-index: 1;
+    cursor: pointer;
 }
