--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -10,6 +10,7 @@
 .input{
     width: 320px;
     background-color: white;
+    color: black;
 }
 
 .textBox{
@@ -17,6 +18,7 @@
     width: 320px;
     margin-bottom: 4px;
     background-color: white;
+    color: black;
 }
 
 .button{
